--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Dashboard</h1>
 <ul>
   <% @posts.each do |post| %>
-    <li><%= post.title %></li>
+    <li><a href="<%= post_url(post) %>"><%= post.title %> - <%= post.user.email %></a></li>
   <% end %>
 </ul>
 
