--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,11 +14,11 @@
 	
 	<div class="input-group">
 		<label for="user_password">Password</label>
-		<input type="text" name="user[password]" id="user_password">
+		<input type="password" name="user[password]" id="user_password">
 	</div>
 	<div class="input-group">
 		<label for="user_password_confirmation">Confirm Password</label>
-		<input type="text" name="user[password_confirmation]" id="password_confirmation">
+		<input type="password" name="user[password_confirmation]" id="password_confirmation">
 	</div>
 	<button type="submit">Sign up!</button>
 </form>
