Took away not-null restraint on post titles. Added validation for source/target on Follow.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,7 @@
-<h1>Dashboard</h1>
+<h1>Dashboard</h1><a href="<%= new_user_post_url(current_user) %>">New Post</a>
 <ul>
   <% @posts.each do |post| %>
-    <li><a href="<%= post_url(post) %>"><%= post.title %></a> - <a href="<%= user_url(post.user) %>"><%= post.user.email %></a></li>
+		<%= render post %>
+    <!-- <li><a href="<%= post_url(post) %>"><%= post.title %></a> - <a href="<%= user_url(post.user) %>"><%= post.user.email %></a></li> -->
   <% end %>
 </ul>
-
-<a href="<%= new_user_post_url(current_user) %>">New Post</a>
