--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,3 @@
-<h1>Here's your post</h1>
-
-<h2><%= @post.title %></h2>
+<h2><%= @post.title %></h2> - <%= @post.user.username %>
 
 <p><%= @post.body %></p>
