--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav>
 	<ul>
-		<li><a href="<%= posts_url %>">Dashboard</a></li>
+		<li id="home-link"><a href="<%= posts_url %>">Dashboard</a></li>
 		
 		<% unless !current_user %>
-		Logged in as: <%= current_user.username %> - <%= link_to 'Log Out', session_url,  method: :delete %>
+		<li id="user-li">Logged in as: <%= current_user.username %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
 		<% end %>
 	</ul>	
 </nav>
