--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,7 @@
 <h1><%= @user.username %>'s Blog</h1>
 	
-<% if current_user.is_following?(@user) %>
-	<%= button_to "Unfollow", {:controller => :follows, :action => 'destroy', :id => @user.id}, :method => :delete %>
-<% elsif (@user != current_user) %>
-	<%= button_to "Follow", user_follows_url(@user) %>
-<% end %>
+<%= follow_button(@user) %>
+
 <% @user.posts.each do |post| %>
-	<div class="post-div">
-		<%= post.title %>
-		<%= post.body %>	
-	</div>
+	<%= render post %>
 <% end %>
