--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
 <nav>
 	<ul>
-		<li id="home-link"><a href="<%= posts_url %>">Dashboard</a></li>
-		
+		<% unless request.env['PATH_INFO'] == new_session_url || new_user_url %>
+			<li id="home-link"><a href="<%= posts_url %>">Dashboard</a></li>
+		<% end %>
 		<% unless !current_user %>
 		<li id="user-li">Logged in as: <%= current_user.username %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
 		<% end %>
