Fixed some CSS styling. decent looking dashboard.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,18 @@
 <html>
 <head>
   <title>Troopr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= render 'shared/errors' %>
 	
 	<%= render 'shared/navbar' %>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-<%= yield %>
+
+	<main>
+		<%= render 'shared/errors' %>
+		<%= yield %>
+	</main>
 
 </body>
 </html>
