--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,12 @@
-<ul>
-<% if flash[:errors] %>
-	<% flash[:errors].each do |error| %>
-		<li><%= error %></li>
-	<% end %>
+<% if (flash[:errors] || flash[:notice]) %>
+	<ul>
+		<% if (flash[:errors]) %>
+			<% flash[:errors].each do |error| %>
+				<li><%= error %></li>
+			<% end %>
+		<% end %>
+		<% if flash[:notice] %>
+			<li><%= flash[:notice] %></li>
+		<% end %>
+	</ul>
 <% end %>
-<% if flash[:notice] %>
-	<li><%= flash[:notice] %></li>
-<% end %>
-</ul>
