--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,107 @@
  *= require_tree .
  *= require_self
  */
+
+body, h1, h2, h3, h4, h5, a, li, ul, div, p, figure {
+	font-style: inherit;
+	color: inherit;
+	background: inherit;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-weight: inherit;
+	font-size: inherit;
+	text-decoration: none;
+	font-family: sans-serif;
+}
+
+ul, li {
+	list-style: none;
+}
+
+/* STYLES */
+
+body {
+	background: #202021;
+}
+
+/* NAV */
+nav {
+	background: #A6A6A6;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	padding: 10px;
+	clear: both;
+	box-sizing: border-box;
+}
+
+li#home-link {
+	float: left;
+}
+
+li#user-li {
+	float: right;
+}
+
+/* CONTENT */
+
+main {
+	width: 700px;
+	margin: auto;
+	position: relative;
+	padding: 5px 15px;
+	top: 56px;
+	background: #C9C9C9;
+}
+
+a#new-post {
+	
+}
+
+div.post-box {
+	width: 600px;
+	border-radius: 10px;
+	border: 2px solid black;
+	margin: 0px 50px 20px 50px;
+	display: inline-block;
+}
+
+
+figure.user-avatar {
+	width: 30px;
+	height: 30px;
+	float: left;
+	background: black;
+	margin: 10px 15px 0px 10px;
+	vertical-align: top;
+}
+
+div.post-content {
+	border-radius: 10px;
+	float: left;
+	width: 545px;
+}
+
+div.post-bottom-bar {
+	clear: both;
+	padding: 5px 10px;
+}
+
+div.post-bottom-bar a{
+	position: relative;
+}
+
+
+div.post-bottom-bar a.notes-display {
+	float: left;
+}
+
+
+div.post-bottom-bar a.reblog-button {
+	float: right;
+}
+
+div.post-bottom-bar a.like-button{
+	float: right;
+}
