--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,7 +9,7 @@
 		<div class="post-bottom-bar">
 				<a href="<%= post_url(post) %>" class="notes-display">Notes!
 				<a href="#" class="reblog-button">Reblog!</a>
-				<a href="#" class="like-button">Like!</a>
+				<%= like_button(post) %>
 		</div>
 	</div>	
 </div>
