Fixed an issue with the migrations.

--- a/app/views/user_mailer/auth_email.html.erb
+++ b/app/views/user_mailer/auth_email.html.erb
@@ -11,7 +11,7 @@
     <p>
       Before you're ready to start posting, you'll need to activate your account. Activate by clicking the link below!
     </p>
-		<p><%= link_to("Activate your account!", activate_users_url(activation_token: @user.activation_token, user_id: @user.id)) %></p>
+		<p><%= link_to("Activate your account!", user_activate_url(activation_token: @user.activation_token, user_id: @user.id)) %></p>
     <p>Thanks for joining and have a great day!</p>
   </body>
 </html>
