--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,13 +2,13 @@
 	<figure class="user-avatar"></figure>
 	<div class="post-content">
 			<div class="content-box">
-			<h5 class="username-header"><a class="username-link" href="<%= user_url(post.user) %>"><%= post.user.username %></a></h5>
-			<% if post.title %><h2 class="post-title"><strong><%= post.title %></strong></h2><% end %>
+			<%= post_byline(post) %>
+			<% if post.title %><h2 class="post-title"><%= post.title %></h2><% end %>
 			<p class="post-body"><%= post.body %></p>
 		</div>
 		<div class="post-bottom-bar">
-				<a href="<%= post_url(post) %>" class="notes-display">Notes!
-				<a href="#" class="reblog-button">Reblog!</a>
+				<a href="<%= post_url(post) %>" class="notes-display"><%= post.get_note_path.length %> notes</a>
+				<%= reblog_button(post) %>
 				<%= like_button(post) %>
 		</div>
 	</div>	
