--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,13 @@
-<h2><%= @post.title %></h2> - <%= @post.user.username %>
-
-<p><%= @post.body %></p>
+<div class="post-content">
+		<div class="content-box">
+		<%= post_byline(@post) %>
+		<% if @post.title %><h2 class="post-title"><%= @post.title %></h2><% end %>
+		<p class="post-body"><%= @post.body %></p>
+	</div>
+	<div class="post-bottom-bar">
+			<%= reblog_button(@post) %>
+			<%= like_button(@post) %>
+	</div>
+	
+	<%= render 'notes', notes: @post.get_notes %>
+</div>	
