--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,10 +6,6 @@
 			<% if post.title %><h2 class="post-title"><%= post.title %></h2><% end %>
 			<p class="post-body"><%= post.body %></p>
 		</div>
-		<div class="post-bottom-bar">
-				<a href="<%= post_url(post) %>" class="notes-display"><%= post.get_note_path.length %> notes</a>
-				<%= reblog_button(post) %>
-				<%= like_button(post) %>
-		</div>
+		<%= render 'post_bottom_bar', post: post %>
 	</div>	
 </div>
