--- a/app/views/follows/index.html.erb
+++ b/app/views/follows/index.html.erb
@@ -1,5 +1,5 @@
-<%= @user.username %>'s Followed Users
+<%= @blog.blogname %>'s Followed Blogs
 
-<% @followed_users.each do |user| %>
-	<%= user.username %>
+<% @followed_blogs.each do |blog| %>
+	<%= blog.blogname %>
 <% end %>
