--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	
 		<%= render 'shared/navbar' %>
 
-		<main class="group">
+		<main>
 			<%= render 'shared/errors' %>
 			<%= yield %>		
 		</main>
