--- a/app/views/user_mailer/auth_email.text.erb
+++ b/app/views/user_mailer/auth_email.text.erb
@@ -1,6 +1,6 @@
 
 =======================================================
-Welcome to Troopr, <%= @user.username %>!
+Welcome to Troopr, <%= @user.email %>!
 =======================================================
 
   You have successfully signed up to Troopr!
