--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<form action="<%= user_posts_url(current_user) %>" method="POST">
+<form action="<%= blog_posts_url(current_blog) %>" method="POST">
   <%= auth_token %>
   <div class="input-group" id="title-div">
     <label for="title">Title</label>
