--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
-<div class="feed">
-	<h1 id="dash-header">Dashboard</h1><a id="new-post" href="<%= new_user_post_url(current_user) %>">New Post</a>
+<div class="feed group">
+	<h1 id="dash-header">Dashboard</h1><a id="new-post" href="<%= new_blog_post_url(current_blog) %>">New Post</a>
 	<% @posts.each do |post| %>
 		<%= render post %>
 	<% end %>
+	<li id="blog-li"><%= render 'shared/change_blogs' %></li>
 </div>
