--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,11 @@
-<div class="post-content">
+<div class="feed group">
+	<div class="post-content">
 		<div class="content-box">
-		<%= post_byline(@post) %>
-		<% if @post.title %><h2 class="post-title"><%= @post.title %></h2><% end %>
-		<p class="post-body"><%= @post.body %></p>
+			<%= post_byline(@post) %>
+			<% if @post.title %><h2 class="post-title"><%= @post.title %></h2><% end %>
+			<p class="post-body"><%= @post.body %></p>
+		</div>
+		<%= render 'posts/post_bottom_bar', post: @post %>
+		<%= render 'posts/notes', notes: @post.notes %>
 	</div>
-	<%= render 'post_bottom_bar', post: @post %>
-	<%= render 'notes', notes: @post.notes %>
-</div>	
+</div>
