--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,8 +5,8 @@
 			<li id="home-link"><a href="<%= posts_url %>"><%= image_tag("logo.png", height: "50") %></a></li>
 		<% end %>
 		<% unless !current_user %>
-		<li id="user-li">Logged in as: <%= current_user.username %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
+			<li id="blog-li">Logged in as: <%= link_to current_user.email, posts_url %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
 		<% end %>
 	</ul>
-</div>	
+</div>
 </nav>
