--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,6 +3,7 @@
 	<div class="post-content">
 			<div class="content-box">
 			<%= post_byline(post) %>
+			<%= delete_button(post) %>
 			<% if post.title %><h2 class="post-title"><%= post.title %></h2><% end %>
 			<p class="post-body"><%= post.body %></p>
 		</div>
