--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -15,5 +15,10 @@
 		<label for="blog_location">Add a location!</label>
 		<input type="text" name="blog[location]" id="blog_location" value="<%= @blog.location %>">
 	</div>
+	
+	<div class="input-group">
+	
+		
+	</div>
 
 	<button type="submit">Create blog!</button>
