--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,7 @@
 <div class="post-box">
 	<figure class="blog-avatar"></figure>
 	<div class="post-content">
+		<div class="arrow-left"></div>
 			<div class="content-box">
 			<%= post_byline(post) %>
 			<%= delete_button(post) %>
