Working blog change function. Added link to find more blogs to follow.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,7 @@
 		<% end %>
 		<% unless !current_user %>
 			<li id="blog-li">Logged in as: <%= link_to current_user.email, posts_url %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
+			<li id="blogs-list-li"><a href="<%= blogs_url %>">Find New Blogs!</a></li>
 		<% end %>
 	</ul>
 </div>
