--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,4 +18,8 @@
 	<button type="submit">Sign up!</button>
 </form>
 
+OR
+
+<a href="/auth/facebook">Login with Facebook!</a>
+
 <a href="<%= new_session_url %>">Already have an account? Sign in!</a>
