--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,6 +70,12 @@ li#blog-li {
 	right: 0px;
 }
 
+li#blogs-list-li {
+	position: absolute;
+	top:30px;
+	right: 0px;
+}
+
 /* CONTENT */
 main {
 	width: 900px;
@@ -183,10 +189,15 @@ input.unlike {
 }
 
 input.post-delete {
+	display: none;
 	position: absolute;
 	right: 5px;
 	top: 5px;
 	background: red;
+}
+
+div.post-content:hover input.post-delete {
+	display:block;
 }
 
 /* NOTES SHOW */
