--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -3,6 +3,7 @@
 <% if current_user.blogs.empty? %>
 	<strong>You have not registered a blog yet! You must create at least one blog before you can access the site.</strong>
 <% end %>
-<form action="<%= user_blogs_url %>" method="POST">
+<br>
+<form action="<%= blogs_url %>" method="POST">
 	<%= render 'form', blog: @blog %>
 </form>
