--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,4 +4,5 @@
 		<%= render post %>
 	<% end %>
 	<li id="blog-li"><%= render 'shared/change_blogs' %></li>
+	<li id="new-blog-li"><a href="<%= new_blog_url %>">Create a new blog</a></li>
 </div>
