--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,6 +20,6 @@
 
 OR
 
-<a href="/auth/facebook">Login with Facebook!</a>
+<a href="/auth/facebook">Sign up with Facebook!</a>
 
 <a href="<%= new_session_url %>">Already have an account? Sign in!</a>
