--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,7 +2,7 @@
 	<%= render 'blog_header', blog: @blog %>
 	<%= follow_button(@blog) %>
 	
-	<% @blog.posts.each do |post| %>
+	<% @blog.posts.order(created_at: :desc).each do |post| %>
 		<%= render 'posts/post', post: post %>
 	<% end %>
 </div>
