--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,9 +1,18 @@
 <figure class="blog-avatar"></figure>
 <div class="post-content">
 	<div class="arrow-left"></div>
-		<div class="content-box">
-			<%= post.get('byline') %>
-			<h2 class="post-title"><%= post.escape('title') %></h2
-			<p class="post-body"><%= post.escape('body') %></p>
-		</div>
+ 	<div class="content-box"> 
+		<p class="blogname-header"><%= byline %></p>
+		<button class="post-delete"><%= String.fromCharCode(215) %></button>
+		<h2 class="post-title"><%= post.escape('title') %></h2>
+		<p class="post-body"><%= post.escape('body') %></p>
+	</div>
+	
+	
+	<div class="post-bottom-bar">
+			<button class="reblog-btn">Reblog!</button>
+			<button class="like-btn">Like!</button>
+			<button class="unlike-btn">Unlike!</button>
+	</div>
+	
 </div>
