--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,4 +1,17 @@
-<h1 id="dash-header">Dashboard</h1><a id="new-post" href="#">New Post</a>
-<section class="posts-space"></div>
-<li id="blog-li"></li>
-<li id="new-blog-li"></li>
+<div class="content-space">
+  <div class="dash group">
+    <figure class="blog-avatar"></figure>
+    <div class="dash-post-panel">
+      <ul class="dash-post-buttons">
+        <a href-"javascript:void(0)" id="text-btn" data-content="text"><p>Text</p></a>
+        <a href-"javascript:void(0)" id="photo-btn" data-content="photo"><p>Photo</p></a>
+        <a href-"javascript:void(0)" id="quote-btn" data-content="quote"><p>Quote</p></a>
+        <a href-"javascript:void(0)" id="link-btn" data-content="link"><p>Link</p></a>
+        <a href-"javascript:void(0)" id="chat-btn" data-content="chat"><p>Chat</p></a>
+        <a href-"javascript:void(0)" id="audio-btn" data-content="audio"><p>Audio</p></a>
+        <a href-"javascript:void(0)" id="video-btn" data-content="video"><p>Video</p></a>
+      </ul>
+    </div>
+  </div>
+<section class="posts-space"></section>
+</div>
