--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,13 @@
-<nav>
-	<div class="nav-content">
-	<ul>
-		<% unless request.env['PATH_INFO'] == (new_session_path || new_user_path) %>
-			<li id="home-link"><a href="<%= posts_url %>"><%= image_tag("logo.png", height: "50") %></a></li>
-		<% end %>
-		<% unless !current_user %>
-			<li id="blog-li">Logged in as: <%= link_to current_user.email, posts_url %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
-			<li id="blogs-list-li"><a href="<%= blogs_url %>">Find New Blogs!</a></li>
-		<% end %>
-	</ul>
-</div>
+<nav class="topbar">
+	<div class="nav-content group">
+		<ul>
+			<% unless request.env['PATH_INFO'] == (new_session_path || new_user_path) %>
+				<li id="home-link"><a href="<%= posts_url %>"><%= image_tag("logo.png", height: "50") %></a></li>
+			<% end %>
+			<% unless !current_user %>
+				<li id="blog-li">Logged in as: <%= link_to current_user.email, posts_url %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
+				<li id="blogs-list-li"><a href="<%= blogs_url %>">Find New Blogs!</a></li>
+			<% end %>
+		</ul>
+	</div>
 </nav>
