--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -412,7 +412,7 @@ form.new-post-form-inputs {
 	background: white;
 	float: left;
 	width: 540px;
-	padding: 15px 20px;c
+	padding: 15px 20px;
 }
 
 div.input-group label {
